[package]
name = "olaunch"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.4"
thiserror = "2.0.18"
toml_edit = "0.25.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ureq = { version = "3.3.0", features = ["json"] }
which = "8.0.2"

[dev-dependencies]
assert_cmd = "2.2.2"
mockito = "1.7.2"
predicates = "3.1.4"
tempfile = "3.27.0"
